--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,12 @@
     "require": {
         "monolog/monolog": "^3.3",
         "ext-yaf": "*",
-        "ext-yar": "*"
+        "ext-yar": "*",
+        "mszlu/tools": "^1.0"
     },
     "autoload": {
         "psr-4": {
             "core\\": "../core/"
-        },
-        "files": ["../tools/functions.php"]
+        }
     }
 }
